fix horizontal scroller

--- a/src/components/photoGallery/style.css
+++ b/src/components/photoGallery/style.css
@@ -2,6 +2,7 @@
   display: flex;
   height: 40rem;
   max-width: 80rem;
+  position: relative;
 }
 
 .nav-button {
@@ -28,14 +29,6 @@
   height: 100%;
   display: flex;
   flex-wrap: nowrap;
-  -webkit-overflow-scrolling: touch;
-}
-
-.image-container {
-  display: inline-block;
-  height: 40rem;
-  width: 80rem;
-  background: transparent;
 }
 
 img {
